--- a/public/lang/es/faq/index.html
+++ b/public/lang/es/faq/index.html
@@ -210,8 +210,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">¿Hay alguna guía paso a paso que pueda seguir? </p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">¿Hay alguna guía paso a paso que pueda seguir? </p>
 
 						<!-- arrow icon -->
 						<span>
@@ -230,8 +230,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Instrucciones de mapeo de teclado</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">Instrucciones de mapeo de teclado</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -297,8 +297,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">¿Cual es la versión para contribuidores de PlayCover?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">¿Cual es la versión para contribuidores de PlayCover?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -315,8 +315,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">¿Cuando será lanzada la siguiente versión de PlayCover?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">¿Cuando será lanzada la siguiente versión de PlayCover?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -333,8 +333,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">¿Es necesario desactivar SIP? ¿Es seguro hacerlo?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">¿Es necesario desactivar SIP? ¿Es seguro hacerlo?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -351,8 +351,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Como cambio de las configuraciones de Genshin=</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">Como cambio de las configuraciones de Genshin=</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -369,8 +369,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">¿Como asigno el click derecho o izquierdo?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">¿Como asigno el click derecho o izquierdo?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -387,8 +387,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">¿El movimiento de camara no funciona en juegos?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">¿El movimiento de camara no funciona en juegos?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -408,8 +408,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">¿Seguí todas las instrucciones del video, pero mi mapeo aun no funciona?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">¿Seguí todas las instrucciones del video, pero mi mapeo aun no funciona?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -426,8 +426,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">¿PlayCover no funciona correctamente a pesar de seguir todos los pasos correctamente (Troubleshoot dice que mi sistema esta correcto)?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">¿PlayCover no funciona correctamente a pesar de seguir todos los pasos correctamente (Troubleshoot dice que mi sistema esta correcto)?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -444,8 +444,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">¿Necesito reinstalar Genshin Impact con cada lanzamiento de PlayCover?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">¿Necesito reinstalar Genshin Impact con cada lanzamiento de PlayCover?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -462,8 +462,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">¿Como reinicio el comando “sudo nvram boot-args...”?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">¿Como reinicio el comando “sudo nvram boot-args...”?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -482,8 +482,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">¿Por qué veo un texto extraño cuando reinicio o enciendo mi Mac?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">¿Por qué veo un texto extraño cuando reinicio o enciendo mi Mac?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -505,8 +505,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">¿No puedo deshabilitar SIP o agregar los boot-args por no puedo agregar la contraseña?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">¿No puedo deshabilitar SIP o agregar los boot-args por no puedo agregar la contraseña?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -523,8 +523,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">¿Me sale el siguiente error “Esta aplicación no es soportada en esta Mac”?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">¿Me sale el siguiente error “Esta aplicación no es soportada en esta Mac”?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -541,8 +541,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">¿Me sale el siguiente error “No tienes los permisos"?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">¿Me sale el siguiente error “No tienes los permisos"?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -575,8 +575,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">¿Mi mapeo de teclado están funcionando mal en Genshin Impact y reiniciar la aplicación no me soluciona nada?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">¿Mi mapeo de teclado están funcionando mal en Genshin Impact y reiniciar la aplicación no me soluciona nada?</p>
 
 						<!-- arrow icon -->
 						<span>
