--- a/public/lang/ru/faq/index.html
+++ b/public/lang/ru/faq/index.html
@@ -213,8 +213,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Есть ли пошаговая инструкция?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">Есть ли пошаговая инструкция?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -233,8 +233,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Инструкция по назначению клавиш</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">Инструкция по назначению клавиш</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -300,8 +300,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Что такое версия PlayCover для спонсоров?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">Что такое версия PlayCover для спонсоров?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -318,8 +318,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Когда будет выпущена новая версия PlayCover?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">Когда будет выпущена новая версия PlayCover?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -336,8 +336,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Нужно ли мне отключать SIP (System Integrity Protection) и безопасно ли это?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">Нужно ли мне отключать SIP (System Integrity Protection) и безопасно ли это?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -354,8 +354,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Как мне поменять настройки Genshin Impact?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">Как мне поменять настройки Genshin Impact?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -372,8 +372,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Как мне добавить левую и правую кнопки мыши?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">Как мне добавить левую и правую кнопки мыши?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -390,8 +390,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Что делать, если в игре не работает камера?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">Что делать, если в игре не работает камера?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -411,8 +411,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Я четко следовал инструкции на видео, но привязка клавиатуры все равно не работает?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">Я четко следовал инструкции на видео, но привязка клавиатуры все равно не работает?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -429,8 +429,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">PlayCover не работает, хотя я выполнил все шаги правильно (даже в результатах диагностики сказано, что моя система настроена правильно)?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">PlayCover не работает, хотя я выполнил все шаги правильно (даже в результатах диагностики сказано, что моя система настроена правильно)?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -447,8 +447,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Нужно ли мне переустанавливать Genshin Impact каждый раз, когда выходит новая версия PlayCover?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">Нужно ли мне переустанавливать Genshin Impact каждый раз, когда выходит новая версия PlayCover?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -465,8 +465,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Как мне отменить команду "sudo nvram boot-args..."</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">Как мне отменить команду "sudo nvram boot-args..."</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -485,8 +485,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Почему я вижу текст при перезагрузке или включении Mac?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">Почему я вижу текст при перезагрузке или включении Mac?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -508,8 +508,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Я не могу отключить SIP или добавить boot-args из-за пустого места вместо пароля?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">Я не могу отключить SIP или добавить boot-args из-за пустого места вместо пароля?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -526,8 +526,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">У меня появляется ошибка «Это приложение не поддерживается на этом Mac»?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">У меня появляется ошибка «Это приложение не поддерживается на этом Mac»?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -544,8 +544,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">У меня появляется ошибка «У вас нет разрешения»?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">У меня появляется ошибка «У вас нет разрешения»?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -578,8 +578,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Моя привязка клавиш в Genshin Impact работает странно, и перезапуск приложения и компьютера не помогает?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">Моя привязка клавиш в Genshin Impact работает странно, и перезапуск приложения и компьютера не помогает?</p>
 
 						<!-- arrow icon -->
 						<span>
