--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -210,8 +210,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Is there any step by step guide that I could follow?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">Is there any step by step guide that I could follow?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -230,8 +230,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Keybindings Instructions</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">Keybindings Instructions</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -297,8 +297,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">What is the supporter version of PlayCover?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">What is the supporter version of PlayCover?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -315,8 +315,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">When will the next version of Playcover be released?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">When will the next version of Playcover be released?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -333,8 +333,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Do I have to disable SIP (System Integrity Protection) and is it safe to?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">Do I have to disable SIP (System Integrity Protection) and is it safe to?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -351,8 +351,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">How can I change Genshin settings?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">How can I change Genshin settings?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -369,8 +369,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">How do I add mouse left or right clicks?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">How do I add mouse left or right clicks?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -387,8 +387,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Camera movement is not working in games?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">Camera movement is not working in games?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -408,8 +408,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">I have followed all steps correctly as shown in the video but my keybindings still don't work?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">I have followed all steps correctly as shown in the video but my keybindings still don't work?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -426,8 +426,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">PlayCover is not working even though I did all the steps correctly (even troubleshoot says that my system is correct)?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">PlayCover is not working even though I did all the steps correctly (even troubleshoot says that my system is correct)?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -444,8 +444,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Do I have to reinstall Genshin Impact every PlayCover release?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">Do I have to reinstall Genshin Impact every PlayCover release?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -462,8 +462,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">How do I reset the "sudo nvram boot-args..." command?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">How do I reset the "sudo nvram boot-args..." command?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -482,8 +482,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">Why do I see random text when I restart or switch my Mac on?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">Why do I see random text when I restart or switch my Mac on?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -505,8 +505,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">I can’t disable SIP or add boot-args because of a *blank password*?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">I can’t disable SIP or add boot-args because of a *blank password*?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -523,8 +523,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">I am getting "This application is not supported on this Mac" error?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">I am getting "This application is not supported on this Mac" error?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -541,8 +541,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">I am getting "You do not have permission" error?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">I am getting "You do not have permission" error?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -575,8 +575,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent md:hover:border-gray-500 md:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="xl:max-w-[61rem] pl-2 pr-4 py-5">My keybindings are acting all weird in Genshin Impact and restarting the app and Mac didn't help either?</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">My keybindings are acting all weird in Genshin Impact and restarting the app and Mac didn't help either?</p>
 
 						<!-- arrow icon -->
 						<span>
